Use common js entrypoint
Signed-off-by: Gerwin Klein <gerwin.klein@data61.csiro.au>

--- a/license-check/action.yml
+++ b/license-check/action.yml
@@ -6,6 +6,12 @@ name: 'License Check'
 description: 'Runs the FSFE reuse license tool'
 author: Gerwin Klein <gerwin.klein@csiro.au>
 
+inputs:
+  action_name:
+    description: 'internal -- do not use'
+    required: false
+    default: 'license-check'
+
 runs:
   using: 'node12'
-  main: 'index.js'
+  main: '../js/index.js'
