--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -17,3 +17,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: lsf37/ci-actions/license-check@master
+
+  links:
+    name: Link Checker
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: peter-evans/link-checker@v1
+        id: lc
+      - run: exit ${{ steps.lc.outputs.exit_code }}
