--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -25,3 +25,9 @@ jobs:
       - uses: lsf37/ci-actions/link-check@master
         with:
           exclude: js/node_modules
+
+  style:
+    name: Style
+    runs-on: ubuntu-latest
+    steps:
+    - uses: lsf37/ci-actions/style@master
