Add bashisms action
Signed-off-by: Gerwin Klein <gerwin.klein@data61.csiro.au>

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -20,3 +20,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: lsf37/ci-actions/git-diff-check@master
+
+  shell:
+    name: 'Portable Shell'
+    runs-on: ubuntu-latest
+    steps:
+    - uses: lsf37/ci-actions/bashisms@master
