link-check: provide a `verbose` option
Signed-off-by: Gerwin Klein <gerwin.klein@data61.csiro.au>

--- a/link-check/action.yml
+++ b/link-check/action.yml
@@ -20,6 +20,8 @@ inputs:
     description: 'Document root for absolute links'
   num_requests:
     description: 'Maximum number of concurrent requests'
+  verbose:
+    description: 'Print more information if set (default unset)'
 
 runs:
   using: 'docker'
