preprocess: include refactored script file
Signed-off-by: Gerwin Klein <gerwin.klein@data61.csiro.au>

--- a/preprocess/Dockerfile
+++ b/preprocess/Dockerfile
@@ -47,6 +47,7 @@ COPY preprocess/make_munge.sh \
      preprocess/test_munge.sh \
      preprocess/steps.sh \
      scripts/checkout-manifest.sh \
+     scripts/fetch-pr.sh \
      /usr/bin/
 
 WORKDIR /usr/bin
