--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
 
   proofs:
     name: 'second'
-    if: failure()
+    if: jobs.preprocess.status == "failure"
     needs: preprocess
     runs-on: ubuntu-latest
     steps:
