--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,10 +15,16 @@ jobs:
     steps:
     - run: exit 1
 
+  other:
+    name: 'other'
+    runs-on: ubuntu-latest
+    steps:
+    - run: exit 0
+
   proofs:
     name: 'second'
     needs: preprocess
-    if: needs.preprocess.status == 'failure'
+    if: failure() && needs.preprocess.status == 'failure'
     runs-on: ubuntu-latest
     steps:
     - run: echo second
