--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
   proofs:
     name: 'second'
     needs: preprocess
-    if: failure() && needs.preprocess.status == 'failure'
+    if: failure()
     runs-on: ubuntu-latest
     steps:
     - run: echo second
