--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,4 +28,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - if: needs.preprocess.status == 'failure'
-    - run: echo second
+      run: echo second
