--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,5 +27,4 @@ jobs:
     if: failure()
     runs-on: ubuntu-latest
     steps:
-    - if: needs.preprocess.status == 'failure'
-      run: echo second
+    - run: echo ${{ needs.preprocess.status }}
