Move repo to seL4 org
Rename all lsf37 references to seL4.

Signed-off-by: Gerwin Klein <gerwin.klein@data61.csiro.au>

--- a/.github/workflows/deploy-link-check.yml
+++ b/.github/workflows/deploy-link-check.yml
@@ -25,6 +25,6 @@ jobs:
         dockerfile: link-check/Dockerfile
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        repository: lsf37/link-check
+        repository: seL4/link-check
         tags: latest
         add_git_labels: true
