--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -13,16 +13,16 @@ jobs:
     name: Gitlint
     runs-on: ubuntu-latest
     steps:
-    - uses: lsf37/ci-actions/gitlint@master
+    - uses: seL4/ci-actions/gitlint@master
 
   whitespace:
     name: 'Trailing Whitespace'
     runs-on: ubuntu-latest
     steps:
-    - uses: lsf37/ci-actions/git-diff-check@master
+    - uses: seL4/ci-actions/git-diff-check@master
 
   shell:
     name: 'Portable Shell'
     runs-on: ubuntu-latest
     steps:
-    - uses: lsf37/ci-actions/bashisms@master
+    - uses: seL4/ci-actions/bashisms@master
