--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -16,13 +16,13 @@ jobs:
     name: License Check
     runs-on: ubuntu-latest
     steps:
-    - uses: lsf37/ci-actions/license-check@master
+    - uses: seL4/ci-actions/license-check@master
 
   links:
     name: Links
     runs-on: ubuntu-latest
     steps:
-      - uses: lsf37/ci-actions/link-check@master
+      - uses: seL4/ci-actions/link-check@master
         with:
           exclude: js/node_modules
 
@@ -30,4 +30,4 @@ jobs:
     name: Style
     runs-on: ubuntu-latest
     steps:
-    - uses: lsf37/ci-actions/style@master
+    - uses: seL4/ci-actions/style@master
