--- a/.github/workflows/deploy-preprocess.yml
+++ b/.github/workflows/deploy-preprocess.yml
@@ -25,6 +25,6 @@ jobs:
         dockerfile: preprocess/Dockerfile
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        repository: seL4/preprocess
+        repository: sel4/preprocess
         tags: latest
         add_git_labels: true
