--- a/.github/workflows/deploy-run-proofs.yml
+++ b/.github/workflows/deploy-run-proofs.yml
@@ -25,6 +25,6 @@ jobs:
         dockerfile: run-proofs/Dockerfile
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        repository: seL4/run-proofs
+        repository: sel4/run-proofs
         tags: latest
         add_git_labels: true
