Another upper case docker repo reference
Signed-off-by: Gerwin Klein <gerwin.klein@data61.csiro.au>

--- a/link-check/Dockerfile
+++ b/link-check/Dockerfile
@@ -4,7 +4,7 @@
 
 # The context for this Dockerfile is the repo root
 
-FROM seL4/liche:f57a5d1c5
+FROM sel4/liche:f57a5d1c5
 
 RUN apk add git
 COPY scripts/checkout.sh link-check/steps.sh /usr/bin/
