run-proofs: more input in Makefile test
Signed-off-by: Gerwin Klein <gerwin.klein@data61.csiro.au>

--- a/run-proofs/Makefile
+++ b/run-proofs/Makefile
@@ -14,4 +14,4 @@ push: build
 
 test: build
 	docker run -ti --entrypoint bash -e GITHUB_REPOSITORY -e GITHUB_REF \
-	  -e GITHUB_SHA -e INPUT_SESSION $(IMG)
+	  -e GITHUB_SHA -e INPUT_SESSION -e GITHUB_WORKSPACE -e INPUT_L4V_ARCH $(IMG)
