run-proofs: support for running in l4v repo
Signed-off-by: Gerwin Klein <gerwin.klein@data61.csiro.au>

--- a/run-proofs/action.yml
+++ b/run-proofs/action.yml
@@ -14,6 +14,7 @@ inputs:
   session:
     description: 'Which proof session to run'
     default: CRefine
+    required: false
 
 runs:
   using: 'docker'
