preprocess: better Makefile setup for tests
Signed-off-by: Gerwin Klein <gerwin.klein@data61.csiro.au>

--- a/preprocess/Makefile
+++ b/preprocess/Makefile
@@ -2,5 +2,17 @@
 #
 # SPDX-License-Identifier: BSD-2-Clause
 
-all:
-	docker build -f Dockerfile ..
+default: build
+
+IMG=sel4/preprocess:latest
+
+build:
+	docker build -t $(IMG) -f Dockerfile ..
+
+push: build
+	docker push $(IMG)
+
+test: build
+	docker run -ti --entrypoint bash -e GITHUB_REPOSITORY -e GITHUB_REF \
+	  -e INPUT_L4V_ARCH -e GITHUB_WORKSPACE -e GITHUB_BASE_REF \
+		-e GITHUB_ACTIONS $(IMG)
