--- a/run-proofs/action.yml
+++ b/run-proofs/action.yml
@@ -15,6 +15,9 @@ inputs:
     description: 'Which proof session to run'
     default: CRefine
     required: false
+  isa_branch:
+    description: 'Which branch/tag of the isabelle repository to use'
+    required: false
 
 runs:
   using: 'docker'
