exclude all node-modules from link check
(for this repo, not globally)

Signed-off-by: Gerwin Klein <kleing@unsw.edu.au>

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -24,7 +24,7 @@ jobs:
     steps:
       - uses: seL4/ci-actions/link-check@master
         with:
-          exclude: js/node_modules
+          exclude: .*/node_modules
 
   style:
     name: Style
