provide manifest option for repo
Currently specifically for the verification manifest, defaulting
to `devel.xml`

Signed-off-by: Gerwin Klein <kleing@unsw.edu.au>

--- a/run-proofs/Makefile
+++ b/run-proofs/Makefile
@@ -14,5 +14,5 @@ push: build
 
 test: build
 	docker run -ti --entrypoint bash -e GITHUB_REPOSITORY -e GITHUB_REF \
-	  -e GITHUB_SHA -e INPUT_SESSION -e INPUT_ISA_BRANCH -e GITHUB_WORKSPACE \
-		-e INPUT_L4V_ARCH -e GITHUB_BASE_REF $(IMG)
+	  -e GITHUB_SHA -e INPUT_SESSION -e INPUT_ISA_BRANCH  -e INPUT_MANIFEST \
+		-e GITHUB_WORKSPACE -e INPUT_L4V_ARCH -e GITHUB_BASE_REF $(IMG)
