Properly implement file exclusion for link check
Fixes #53

Signed-off-by: Gerwin Klein <kleing@unsw.edu.au>

--- a/link-check/action.yml
+++ b/link-check/action.yml
@@ -7,13 +7,11 @@ description: 'Check links in .md and .html files'
 author: Gerwin Klein <gerwin.klein@csiro.au>
 
 inputs:
-  files:
-    description: 'List of files to check'
   dir:
     description: 'Directory to check (recursively)'
     default: .
   exclude:
-    description: 'Regex for which files to exclude'
+    description: 'grep regex on path for which files to exclude'
   timeout:
     description: 'Timeout for link response'
   doc_root:
