add exclude_urls option
Signed-off-by: Gerwin Klein <kleing@unsw.edu.au>

--- a/link-check/action.yml
+++ b/link-check/action.yml
@@ -14,6 +14,9 @@ inputs:
   exclude:
     description: 'grep regex on path for which files to exclude'
     required: false
+  exclude_urls:
+    description: 'regex which URLs to exclude'
+    required: false
   timeout:
     description: 'Timeout for link response'
     required: false
