--- a/gitlint/action.yml
+++ b/gitlint/action.yml
@@ -4,7 +4,7 @@
 
 name: 'Gitlint'
 description: 'Runs the gitlint tool on pull requests'
-author: Gerwin Klein <gerwin.klein@csiro.au>
+author: Gerwin Klein <kleing@unsw.edu.au>
 
 inputs:
   config:
