fix workflow syntax
Signed-off-by: Gerwin Klein <kleing@unsw.edu.au>

--- a/.github/workflows/isabelle-mirror.yml
+++ b/.github/workflows/isabelle-mirror.yml
@@ -4,11 +4,11 @@
 
 # Scheduled Isabelle Mirror action
 
-name: Isabelle Mirror
+name: 'Isabelle Mirror'
 
 on:
   schedule:
-    - '3 2 * * *'
+    - cron: '3 2 * * *'
 
 jobs:
   isabelle-mirror:
