Add MCS preprocessing
Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/preprocess/action.yml
+++ b/preprocess/action.yml
@@ -14,10 +14,14 @@ inputs:
     description: 'Architecture to test. One of ARM, ARM_HYP, RISCV64, X64'
     required: true
 
+  L4V_FEATURES:
+    description: 'Additional features to include. Empty ("") or "MCS".'
+    required: false
+
   action_name:
     description: 'internal -- do not use'
     required: false
-    default: 'gitlint'
+    default: 'preprocess'
 
 runs:
   using: 'docker'
