--- a/.github/workflows/deploy-cparser-builder.yml
+++ b/.github/workflows/deploy-cparser-builder.yml
@@ -19,12 +19,13 @@ jobs:
     name: Docker (C Parser Builder)
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - uses: docker/build-push-action@v1
+    - uses: docker/setup-buildx-action@v1
+    - uses: docker/login-action@v1
       with:
-        dockerfile: docker/cparser-builder.dockerfile
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        repository: sel4/cparser-builder
-        tags: latest
-        add_git_labels: true
+    - uses: docker/build-push-action@v2
+      with:
+        push: true
+        file: docker/cparser-builder.dockerfile
+        tags: sel4/cparser-builder:latest
