--- a/.github/workflows/deploy-cparser-run.yml
+++ b/.github/workflows/deploy-cparser-run.yml
@@ -21,12 +21,13 @@ jobs:
     name: Docker (C Parser Run)
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - uses: docker/build-push-action@v1
+    - uses: docker/setup-buildx-action@v1
+    - uses: docker/login-action@v1
       with:
-        dockerfile: cparser-run/Dockerfile
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        repository: sel4/cparser-run
-        tags: latest
-        add_git_labels: true
+    - uses: docker/build-push-action@v2
+      with:
+        push: true
+        file: cparser-run/Dockerfile
+        tags: sel4/cparser-run:latest
