--- a/.github/workflows/deploy-preprocess.yml
+++ b/.github/workflows/deploy-preprocess.yml
@@ -19,12 +19,13 @@ jobs:
     name: Docker (Preprocess)
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - uses: docker/build-push-action@v1
+    - uses: docker/setup-buildx-action@v1
+    - uses: docker/login-action@v1
       with:
-        dockerfile: preprocess/Dockerfile
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        repository: sel4/preprocess
-        tags: latest
-        add_git_labels: true
+    - uses: docker/build-push-action@v2
+      with:
+        push: true
+        file: preprocess/Dockerfile
+        tags: sel4/preprocess:latest
