platforms: factor out Build class into own module
Also add functions for generating variants and build filters,
manipulating and running these, and a simple test driver that can be
reused over multiple different test.

Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/cparser-run/builds.yml
+++ b/cparser-run/builds.yml
@@ -4,6 +4,11 @@
 
 ---
 
+# all of the builds are verification builds
+default:
+    settings:
+        VERIFICATION: "TRUE"
+
 # C parser runs need:
 #   - platform
 #   - mode if platform supports more than one
