sel4-test sim: exclude RISC-V "release" simulation
Bamboo excludes this config, and the simulator seems to hang when
run with the release binary.

Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/sel4test-sim/builds.yml
+++ b/sel4test-sim/builds.yml
@@ -35,6 +35,11 @@ variants:
 # only generate builds for platofrms that have `simulation_binary` set
 build-filter:
     - simulation_binary: true
+      arch: [arm, x86]
+    - simulation_binary: true
+      arch: [riscv]
+      # Bamboo has no "release" simulation for RISCV, and it doesn't seem to work either:
+      debug: [debug]
 
 
 # A build-filter is a list of dicts. A build passes the filter if it passes any
