Deploy C parser images on changes to l4v
The l4v repository has a corresponding action that sends a
repository_dispatch event when the C parser changes.

Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/.github/workflows/deploy-cparser-run.yml
+++ b/.github/workflows/deploy-cparser-run.yml
@@ -16,7 +16,7 @@ on:
     - 'seL4-platforms/**'
     - 'cparser-run/**'
   repository_dispatch:
-    types: [cparser-build]
+    types: [cparser-deploy]
 
 jobs:
   docker:
