--- a/.github/workflows/deploy-cparser-run.yml
+++ b/.github/workflows/deploy-cparser-run.yml
@@ -15,6 +15,8 @@ on:
     - 'docker/**'
     - 'seL4-platforms/**'
     - 'cparser-run/**'
+  repository_dispatch:
+    types: [cparser-build]
 
 jobs:
   docker:
