Deploy cparser-builder after all
This mostly reverts commit 467e79db9a49efda2ce2296a12ffaa48c8af0720
and deploys the cparser image after all, because it's too hard to
figure out how to refer to a locally built image in the GitHub docker
action.

Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/.github/workflows/deploy-preprocess.yml
+++ b/.github/workflows/deploy-preprocess.yml
@@ -7,15 +7,10 @@
 name: Deploy
 
 on:
-  push:
-    branches:
-    - master
-    paths:
-    - 'scripts/**'
-    - 'docker/**'
-    - 'preprocess/**'
+  # the real build trigger is in deploy-cparser-builder
   repository_dispatch:
-    types: [cparser-deploy]
+    types: [cparser-build]
+  workflow_dispatch:
 
 jobs:
   docker:
