--- a/.github/workflows/deploy-cparser-run.yml
+++ b/.github/workflows/deploy-cparser-run.yml
@@ -7,16 +7,10 @@
 name: Deploy
 
 on:
-  push:
-    branches:
-    - master
-    paths:
-    - 'scripts/**'
-    - 'docker/**'
-    - 'seL4-platforms/**'
-    - 'cparser-run/**'
+  # the real build trigger is in deploy-cparser-builder
   repository_dispatch:
-    types: [cparser-deploy]
+    types: [cparser-build]
+  workflow_dispatch:
 
 jobs:
   docker:
