--- a/aws-proofs/action.yml
+++ b/aws-proofs/action.yml
@@ -17,6 +17,17 @@ inputs:
   isa_branch:
     description: 'Which branch/tag of the isabelle repository to use'
     required: false
+  cache_read:
+    description: 'Read Isabelle image cache from S3. Set to empty string to skip.'
+    default: 'true'
+    required: false
+  cache_write:
+    description: 'Write Isabelle image cache to S3. Set to empty string to skip.'
+    default: 'true'
+    required: false
+  cache_name:
+    description: 'Custom cache name. Should contain at least L4V_ARCH.'
+    required: false
   manifest:
     description: "Which manifest file to use (default devel.xml)"
     required: false
