platforms: hifive has smp
Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/seL4-platforms/platforms.yml
+++ b/seL4-platforms/platforms.yml
@@ -44,6 +44,7 @@ platforms:
   HIFIVE:
     arch: riscv
     modes: [64]
+    smp: [64]
     platform: hifive
     req: hifive1
     march: rv64imac
