platforms: add odroid_c4
Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/seL4-platforms/platforms.yml
+++ b/seL4-platforms/platforms.yml
@@ -123,6 +123,15 @@ platforms:
     req: odroidc2
     march: armv8a
 
+  ODROID_C4:
+    arch: arm
+    modes: [64]
+    platform: odroidc4
+    req: odroidc4
+    march: armv8a
+    disabled: true
+    no_hw_build: true
+
   ODROID_X:
     arch: arm
     modes: [32]
