builds.py: refactor junit sanitising
Assume a standard seL4 project layout and use the existing junit
sanitiser on test output instead of homegrown solution.

Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/cparser-run/Dockerfile
+++ b/cparser-run/Dockerfile
@@ -10,7 +10,7 @@ FROM trustworthysystems/sel4-riscv
 
 COPY --from=sel4/cparser-builder /c-parser /c-parser
 
-RUN pip3 install junitparser strip-ansi
+RUN pip3 install junitparser
 
 COPY cparser-run/steps.sh \
      scripts/checkout-manifest.sh \
