--- a/sel4test-sim/Dockerfile
+++ b/sel4test-sim/Dockerfile
@@ -8,7 +8,7 @@ ARG WORKSPACE=/workspace
 
 FROM trustworthysystems/sel4-riscv
 
-RUN pip3 install junitparser strip-ansi
+RUN pip3 install junitparser
 
 COPY sel4test-sim/steps.sh \
      scripts/checkout-manifest.sh \
