--- a/camkes-test/Makefile
+++ b/camkes-test/Makefile
@@ -13,14 +13,15 @@ push: build
 	docker push $(IMG)
 
 run: build
-	docker run -e GITHUB_REPOSITORY -e GITHUB_REF \
+	docker run --rm -e GITHUB_REPOSITORY -e GITHUB_REF \
 	  -e GITHUB_WORKSPACE -e INPUT_ARCH -e INPUT_MARCH -e INPUT_MODE \
 		-e INPUT_COMPILER -e INPUT_DEBUG -e INPUT_MATRIX -e INPUT_NAME \
 		-e INPUT_REQ $(IMG)
 
+# pass in a dummy HOME directory to simulate GitHub changing HOME
 test: build
-	docker run -ti --entrypoint bash -e GITHUB_REPOSITORY -e GITHUB_REF \
+	docker run --rm -ti --entrypoint bash -e GITHUB_REPOSITORY -e GITHUB_REF \
 	  -e GITHUB_WORKSPACE -e INPUT_ARCH -e INPUT_MARCH -e INPUT_MODE \
 		-e INPUT_COMPILER -e INPUT_DEBUG -e INPUT_MATRIX -e INPUT_NAME \
-		-e INPUT_REQ \
+		-e INPUT_REQ -e HOME=/tmp \
 		-v $(shell pwd):/mnt:z $(IMG)
