--- a/.github/workflows/deploy-rumprun.yml
+++ b/.github/workflows/deploy-rumprun.yml
@@ -13,12 +13,12 @@ on:
     paths:
     - 'scripts/**'
     - 'seL4-platforms/**'
-    - 'rumprun/**'
+    - 'rump-hello/**'
   workflow_dispatch:
 
 jobs:
   docker:
-    name: Docker (RumpRun)
+    name: Docker (RumpHello)
     runs-on: ubuntu-latest
     steps:
     - uses: docker/setup-buildx-action@v1
@@ -29,5 +29,5 @@ jobs:
     - uses: docker/build-push-action@v2
       with:
         push: true
-        file: rumprun/Dockerfile
-        tags: sel4/rumprun:latest
+        file: rump-hello/Dockerfile
+        tags: sel4/rump-hello:latest
