camkes-vm: add Arm builds
These used to run in a separate test on Bamboo, which used the retired
camkes-arm-vm-manifest. Now unified in here.

Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/camkes-vm/action.yml
+++ b/camkes-vm/action.yml
@@ -11,6 +11,9 @@ inputs:
   name:
     description: 'Name of the build to run (for matrix builds)'
     required: false
+  march:
+    description: 'Comma-separated list of march to filter on (for matrix builds)'
+    required: false
 
 runs:
   using: 'docker'
