--- a/camkes-vm/Makefile
+++ b/camkes-vm/Makefile
@@ -16,12 +16,12 @@ run: build
 	docker run --rm -e GITHUB_REPOSITORY -e GITHUB_REF \
 	  -e GITHUB_WORKSPACE -e INPUT_ARCH -e INPUT_MARCH -e INPUT_MODE \
 		-e INPUT_COMPILER -e INPUT_DEBUG -e INPUT_MATRIX -e INPUT_NAME \
-		-e INPUT_REQ $(IMG)
+		-e INPUT_REQ -e INPUT_PLATFORM $(IMG)
 
 # pass in a dummy HOME directory to simulate GitHub changing HOME
 test: build
 	docker run --rm -ti --entrypoint bash -e GITHUB_REPOSITORY -e GITHUB_REF \
 	  -e GITHUB_WORKSPACE -e INPUT_ARCH -e INPUT_MARCH -e INPUT_MODE \
 		-e INPUT_COMPILER -e INPUT_DEBUG -e INPUT_MATRIX -e INPUT_NAME \
-		-e INPUT_REQ -e HOME=/tmp \
+		-e INPUT_REQ -e INPUT_PLATFORM -e HOME=/tmp \
 		-v $(shell pwd):/mnt:z $(IMG)
