--- a/camkes-vm/builds.yml
+++ b/camkes-vm/builds.yml
@@ -12,6 +12,7 @@ default:
   req: haswell3
 
 builds:
+# PC99:
 - optiplex9020:
     mode: 64
 - minimal:
@@ -20,3 +21,62 @@ builds:
     mode: 64
     success: 'Finished running all scenarios'
     error: 'Exited with error'
+
+# Arm:
+- vm_minimal_tk1:
+    app: vm_minimal
+    platform: TK1
+- odroid_vm:
+    platform: ODROID_XU
+    succes: 'root@NICTAcopter:'
+- vm_minimal_tx1:
+    app: vm_minimal
+    platform: TX1
+- vm_minimal_tx2:
+    app: vm_minimal
+    platform: TX2
+- vm_minimal_sim:
+    app: vm_minimal
+    platform: ARMVIRT
+    sim: true
+- vm_minimal_xu4:
+    app: vm_minimal
+    platform: ODROID_XU4
+- vm_minimal_smp_tx1:
+    app: vm_minimal
+    platform: TX1
+    setttings:
+        NUM_NODES: 4
+- vm_minimal_smp_tx2:
+    app: vm_minimal
+    platform: TX2
+    setttings:
+        NUM_NODES: 4
+- vm_serial_server:
+    platform: ODROID_XU4
+- vm_virtio_net_arping_xu4:
+    app: vm_virtio_net
+    platform: ODROID_XU4
+    succes: 'arping test was successful'
+- vm_virtio_net_ping_xu4:
+    app: vm_virtio_net
+    platform: ODROID_XU4
+    succes: 'Ping test was successful'
+    setttings:
+        VIRTIO_NET_PING: '1'
+- vm_virtio_net_arping_tx2:
+    app: vm_virtio_net
+    platform: TX2
+    succes: 'arping test was successful'
+- vm_virtio_net_ping_tx2:
+    app: vm_virtio_net
+    platform: TX2
+    succes: 'Ping test was successful'
+    setttings:
+        VIRTIO_NET_PING: '1'
+- vm_multi:
+    platform: ODROID_XU4
+    success: 'buildroot login:.*buildroot login:.*buildroot login:'
+- vm_cross_connector:
+    platform: ODROID_XU4
+    succes: 'Finished crossvm test script'
