--- a/tutorials/Dockerfile
+++ b/tutorials/Dockerfile
@@ -5,23 +5,23 @@
 # The context of this Dockerfiles is the repo root (../)
 
 ARG WORKSPACE=/workspace
+ARG SCRIPTS=/ci-scripts
+ARG ACTION=tutorials
 
 FROM trustworthysystems/camkes:latest
 
-RUN pip3 install junitparser
+RUN pip3 install junitparser PyGithub
 
-COPY tutorials/steps.sh \
-     scripts/checkout-manifest.sh \
-     scripts/fetch-branch.sh \
-     scripts/repo-util \
-     /usr/bin/
-
-WORKDIR /usr/bin
-RUN chmod a+rx checkout-manifest.sh fetch-branch.sh repo-util steps.sh
+ARG ACTION
+ARG SCRIPTS
+RUN mkdir ${SCRIPTS}
+COPY ${ACTION}/steps.sh scripts/* ${SCRIPTS}/
+RUN chmod a+rx ${SCRIPTS}/*
+ENV  PATH "${SCRIPTS}:${PATH}"
 
 RUN mkdir /builds
-COPY tutorials/builds.yml \
-     tutorials/build.py \
+COPY ${ACTION}/builds.yml \
+     ${ACTION}/build.py \
      seL4-platforms/platforms.yml \
      seL4-platforms/platforms.py \
      seL4-platforms/builds.py \
