--- a/cparser-run/Dockerfile
+++ b/cparser-run/Dockerfile
@@ -5,25 +5,25 @@
 # The context of this Dockerfiles is the repo root (../)
 
 ARG WORKSPACE=/workspace
+ARG SCRIPTS=/ci-scripts
+ARG ACTION=cparser-run
 
 FROM trustworthysystems/sel4-riscv
 
 COPY --from=sel4/cparser-builder /c-parser /c-parser
 
-RUN pip3 install junitparser
+RUN pip3 install junitparser PyGithub
 
-COPY cparser-run/steps.sh \
-     scripts/checkout-manifest.sh \
-     scripts/fetch-branch.sh \
-     scripts/repo-util \
-     /usr/bin/
-
-WORKDIR /usr/bin
-RUN chmod a+rx checkout-manifest.sh fetch-branch.sh steps.sh repo-util
+ARG ACTION
+ARG SCRIPTS
+RUN mkdir ${SCRIPTS}
+COPY ${ACTION}/steps.sh scripts/* ${SCRIPTS}/
+RUN chmod a+rx ${SCRIPTS}/*
+ENV  PATH "${SCRIPTS}:${PATH}"
 
 RUN mkdir /builds
-COPY cparser-run/builds.yml \
-     cparser-run/build.py \
+COPY ${ACTION}/builds.yml \
+     ${ACTION}/build.py \
      seL4-platforms/platforms.yml \
      seL4-platforms/platforms.py \
      seL4-platforms/builds.py \
