--- a/rump-hello/Dockerfile
+++ b/rump-hello/Dockerfile
@@ -5,21 +5,19 @@
 # The context of this Dockerfiles is the repo root (../)
 
 ARG WORKSPACE=/workspace
+ARG SCRIPTS=/ci-scripts
 ARG ACTION=rump-hello
 
 FROM trustworthysystems/camkes:latest
 
-RUN pip3 install junitparser
+RUN pip3 install junitparser PyGithub
 
 ARG ACTION
-COPY ${ACTION}/steps.sh \
-     scripts/checkout-manifest.sh \
-     scripts/fetch-branch.sh \
-     scripts/repo-util \
-     /usr/bin/
-
-WORKDIR /usr/bin
-RUN chmod a+rx checkout-manifest.sh fetch-branch.sh repo-util steps.sh
+ARG SCRIPTS
+RUN mkdir ${SCRIPTS}
+COPY ${ACTION}/steps.sh scripts/* ${SCRIPTS}/
+RUN chmod a+rx ${SCRIPTS}/*
+ENV  PATH "${SCRIPTS}:${PATH}"
 
 RUN mkdir /builds
 COPY ${ACTION}/builds.yml \
