sel4test: enable xml manifest input
Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/sel4test-hw/action.yml
+++ b/sel4test-hw/action.yml
@@ -28,6 +28,9 @@ inputs:
   sha:
     description: git sha to test
     required: false
+  xml:
+    description: sel4test xml manifest to test
+    required: false
   action_name:
     description: 'internal -- do not use'
     required: false
