--- a/sel4test-sim/action.yml
+++ b/sel4test-sim/action.yml
@@ -21,6 +21,9 @@ inputs:
   compiler:
     description: One of `{gcc, clang} to filter test configs on`
     required: false
+  xml:
+    description: sel4test xml manifest to test
+    required: false
   debug:
     description: |
       Comma separated list of debug levels from `{debug, release, verification}`
