docker: use new Debian 11 docker base images
These include the riscv toolchain in the base seL4 image already.

Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/camkes-unit/Dockerfile
+++ b/camkes-unit/Dockerfile
@@ -4,7 +4,7 @@
 
 # The context for this Dockerfile is the repo root
 
-FROM trustworthysystems/camkes
+FROM trustworthysystems/camkes:lastest
 
 COPY scripts/*.sh camkes-unit/steps.sh /usr/bin/
 
