--- a/cparser-run/Dockerfile
+++ b/cparser-run/Dockerfile
@@ -8,7 +8,7 @@ ARG WORKSPACE=/workspace
 ARG SCRIPTS=/ci-scripts
 ARG ACTION=cparser-run
 
-FROM trustworthysystems/sel4-riscv
+FROM trustworthysystems/sel4:latest
 
 COPY --from=sel4/cparser-builder /c-parser /c-parser
 
