--- a/sel4bench/Dockerfile
+++ b/sel4bench/Dockerfile
@@ -8,7 +8,7 @@ ARG WORKSPACE=/workspace
 ARG SCRIPTS=/ci-scripts
 ARG ACTION=sel4bench
 
-FROM trustworthysystems/sel4-riscv
+FROM trustworthysystems/sel4:latest
 
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
