style: enable diff check on push events
Currently, we are checking the diff on PRs and all files on push, but
we have some repositories that are not style-clean, and that we are
only updating as we are touching files. In those situations, we will
want the `push` style check on the diff, not on everything.

Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/style/action.yml
+++ b/style/action.yml
@@ -7,6 +7,10 @@ description: 'Runs coding style checks of the seL4 Foundation'
 author: Gerwin Klein <kleing@unsw.edu.au>
 
 inputs:
+  diff_only:
+    description: even on "push", check only the diff to the head of the branch
+                 before the push, not all files. Does not work for force-push.
+    required: false
   action_name:
     description: 'internal -- do not use'
     required: false
