--- a/seL4-platforms/platforms.yml
+++ b/seL4-platforms/platforms.yml
@@ -284,7 +284,7 @@ platforms:
     modes: [32, 64]
     smp: [32, 64]
     platform: x86_64
-    req: [skylake, haswell3, haswell4, skylake2]
+    req: [haswell3, haswell4, skylake2] # skylake temporarily out of order
     simulation_binary: x86
     march: nehalem
 
