platforms: skylake is working again
Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/seL4-platforms/platforms.yml
+++ b/seL4-platforms/platforms.yml
@@ -274,7 +274,7 @@ platforms:
     modes: [32, 64]
     smp: [32, 64]
     platform: x86_64
-    req: [haswell3, haswell4, skylake2] # skylake temporarily out of order
+    req: [skylake, haswell3, haswell4, skylake2]
     simulation_binary: x86
     march: nehalem
 
