--- a/sel4test-sim/Dockerfile
+++ b/sel4test-sim/Dockerfile
@@ -10,6 +10,12 @@ ARG ACTION=sel4test-sim
 
 FROM trustworthysystems/sel4-riscv
 
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends \
+       libffi-dev \
+    && apt-get clean autoclean \
+    && apt-get autoremove --yes \
+    && rm -rf /var/lib/{apt,dpkg,cache,log}/
 RUN pip3 install junitparser PyGithub
 
 ARG SCRIPTS
