platforms: disable boards not in machine queue
These boards have tests, but are not available in the machine queue
yet.

Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/seL4-platforms/platforms.yml
+++ b/seL4-platforms/platforms.yml
@@ -146,6 +146,7 @@ platforms:
     req: [odroid-xu]
     image_platform: exynos5
     march: armv7a
+    disabled: true
 
   ARNDALE:
     arch: arm
@@ -223,6 +224,7 @@ platforms:
     platform: tx1
     req: [tx1]
     march: armv8a
+    disabled: true
 
   TX2:
     arch: arm
