platforms: fix machine name for jetson
Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/seL4-platforms/platforms.yml
+++ b/seL4-platforms/platforms.yml
@@ -196,7 +196,7 @@ platforms:
     modes: [32]
     aarch_hyp: [32]
     platform: tk1
-    req: [jetson]
+    req: [jetson1]
     march: armv7a
 
   RPI3:
