camkes-vm-hw: run on haskwell3
Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/camkes-vm/builds.yml
+++ b/camkes-vm/builds.yml
@@ -14,10 +14,13 @@ builds:
 # PC99:
 - optiplex9020:
     mode: 64
+    req: haswell3
 - minimal:
     mode: 32
+    req: haswell3
 - zmq_samples:
     mode: 64
+    req: haswell3
     success: 'Finished running all scenarios'
     error: 'Exited with error'
 
